# mote

./: .gitignore  README.md  babel.cfg  cache.json  config.py  pyproject.toml  run-mote.py  tox.ini
mote/: app.py
mote/mote/: latest_meetings.py  mote.py  soke.py  util.py
mote/templates/: homepage.html  motehome.html  no_main.html
tests/: cache.json
tests/unit/: config_test.py  test_mote.py
